Add management metrics and health endpoints to service configuration files

--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -42,5 +42,17 @@ springdoc:
     operationsSorter: method
     tagsSorter: alpha
 
+management:
+  metrics:
+    tags:
+      application: catalog-service
+  endpoints:
+    web:
+      exposure:
+        include: health, metrics, prometheus
+  endpoint:
+    health:
+      show-details: always
+
 server:
   port: 8081
